// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Next/TextWithCopy Always showing the copy icon 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ kYHmyz"
  >
    <span
      className="sc-fKFyDc dToKui sc-iwyYcG bsaCCL sc-kUbhmq iIBqut text-with-copy"
      title="This value has been copied to your clipboard!"
    >
      <span
        className="text-with-copy__content"
      >
        click the icon
      </span>
      <span
        className="text-with-copy__copy_wrapper"
        onClick={[Function]}
      >
        <div
          className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP text-with-copy__copy"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-copy fa-w-14 "
            data-icon="copy"
            data-prefix="far"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Next/TextWithCopy Code 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <span
      className="sc-fKFyDc dToKui sc-iwyYcG bsaCCL sc-kUbhmq cYZQzZ text-with-copy"
      title="This value has been copied to your clipboard!"
    >
      <code
        title="This value has been copied to your clipboard!"
      >
        22ab7io
      </code>
      <span
        className="text-with-copy__copy_wrapper"
        onClick={[Function]}
      >
        <div
          className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP text-with-copy__copy"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-copy fa-w-14 "
            data-icon="copy"
            data-prefix="far"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </span>
    </span>
  </div>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <span
      className="sc-fKFyDc dToKui sc-iwyYcG bsaCCL sc-kUbhmq cYZQzZ text-with-copy"
      title="This value has been copied to your clipboard!"
    >
      <code
        title="This value has been copied to your clipboard!"
      >
        3555432
      </code>
      <span
        className="text-with-copy__copy_wrapper"
        onClick={[Function]}
      >
        <div
          className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP text-with-copy__copy"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-copy fa-w-14 "
            data-icon="copy"
            data-prefix="far"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </span>
    </span>
  </div>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <span
      className="sc-fKFyDc dToKui sc-iwyYcG bsaCCL sc-kUbhmq cYZQzZ text-with-copy"
      title="Specify only the copy prop"
    >
      <code
        title="Specify only the copy prop"
      >
        Specify only the copy prop
      </code>
      <span
        className="text-with-copy__copy_wrapper"
        onClick={[Function]}
      >
        <div
          className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP text-with-copy__copy"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-copy fa-w-14 "
            data-icon="copy"
            data-prefix="far"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </span>
    </span>
  </div>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <span
      className="sc-fKFyDc dToKui sc-iwyYcG bsaCCL sc-kUbhmq cYZQzZ text-with-copy"
    >
      <code
        title="Or only the text prop"
      >
        Or only the text prop
      </code>
      <span
        className="text-with-copy__copy_wrapper"
        onClick={[Function]}
      >
        <div
          className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP text-with-copy__copy"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-copy fa-w-14 "
            data-icon="copy"
            data-prefix="far"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Next/TextWithCopy Inside clickable element 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <a
      className="sc-eGCarw kBARfK sc-ctaXAZ bvFpzE"
      color="primary.main"
      href="#foobar"
      style={
        Object {
          "display": "block",
        }
      }
    >
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV"
      >
        <div
          className="sc-gKsewC cgpPfo sc-iBPRYJ fFcuwR"
        >
          Link Text
        </div>
        <div
          className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP"
        >
          <span
            className="sc-fKFyDc dToKui sc-iwyYcG bsaCCL sc-kUbhmq cYZQzZ text-with-copy"
            title="This value has been copied to your clipboard!"
          >
            <span
              className="text-with-copy__content"
            >
              hover & click the icon
            </span>
            <span
              className="text-with-copy__copy_wrapper"
              onClick={[Function]}
            >
              <div
                className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP text-with-copy__copy"
                onClick={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-copy fa-w-14 "
                  data-icon="copy"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </div>
            </span>
          </span>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Storyshots Next/TextWithCopy Standard 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <span
      className="sc-fKFyDc dToKui sc-iwyYcG bsaCCL sc-kUbhmq cYZQzZ text-with-copy"
      title="This value has been copied to your clipboard!"
    >
      <span
        className="text-with-copy__content"
      >
        <i>
          hover
        </i>
         & 
        <b>
          click
        </b>
         the icon
      </span>
      <span
        className="text-with-copy__copy_wrapper"
        onClick={[Function]}
      >
        <div
          className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP text-with-copy__copy"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-copy fa-w-14 "
            data-icon="copy"
            data-prefix="far"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Next/TextWithCopy Wrapping text 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ kYHmyz"
  >
    <span
      className="sc-fKFyDc dToKui sc-iwyYcG bsaCCL sc-kUbhmq cYZQzZ text-with-copy"
      title="This value has been copied to your clipboard!"
    >
      <span
        className="text-with-copy__content"
      >
        hover & click ... ... ... ... ... ... ... ... ... ... ... ... the icon on the wrapped text
      </span>
      <span
        className="text-with-copy__copy_wrapper"
        onClick={[Function]}
      >
        <div
          className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP text-with-copy__copy"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-copy fa-w-14 "
            data-icon="copy"
            data-prefix="far"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </span>
    </span>
  </div>
</div>
`;
